FAV-14 support KF Patient, DocumentReference, etc. in AdvancedMode